fix alignment with upvotes to other elements in a card

--- a/source/scss/components/_newsarticle.scss
+++ b/source/scss/components/_newsarticle.scss
@@ -47,7 +47,7 @@
 .upvote-icon {
   width: 20px;
   height: 20px;
-  padding: 0 20px;
+  padding: 0 10px;
 }
 
 .upvotes {
